--- a/ClimbThatTower/ClimbThatTower.CSharp.csproj
+++ b/ClimbThatTower/ClimbThatTower.CSharp.csproj
@@ -63,7 +63,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\AItem.cs" />
     <Compile Include="Assets\Completed\Scripts\BoardManager.cs" />
     <Compile Include="Assets\Completed\Scripts\Enemy.cs" />
     <Compile Include="Assets\Completed\Scripts\GameManager.cs" />
@@ -72,16 +71,26 @@
     <Compile Include="Assets\Completed\Scripts\Player.cs" />
     <Compile Include="Assets\Completed\Scripts\SoundManager.cs" />
     <Compile Include="Assets\Completed\Scripts\Wall.cs" />
-    <Compile Include="Assets\Consumable.cs" />
-    <Compile Include="Assets\Foot.cs" />
-    <Compile Include="Assets\Hand.cs" />
-    <Compile Include="Assets\Head.cs" />
-    <Compile Include="Assets\MenuChoice.cs" />
-    <Compile Include="Assets\MenuUI.cs" />
-    <Compile Include="Assets\Pants.cs" />
-    <Compile Include="Assets\TestInventory.cs" />
-    <Compile Include="Assets\Torso.cs" />
-    <Compile Include="Assets\Weapon.cs" />
+    <Compile Include="Assets\Entity\AEntity.cs" />
+    <Compile Include="Assets\Item\AItem.cs" />
+    <Compile Include="Assets\Item\Consumable.cs" />
+    <Compile Include="Assets\Item\Foot.cs" />
+    <Compile Include="Assets\Item\Hand.cs" />
+    <Compile Include="Assets\Item\Head.cs" />
+    <Compile Include="Assets\Item\Pants.cs" />
+    <Compile Include="Assets\Item\TestInventory.cs" />
+    <Compile Include="Assets\Item\Torso.cs" />
+    <Compile Include="Assets\Item\Weapon.cs" />
+    <Compile Include="Assets\Jobs\AJob.cs" />
+    <Compile Include="Assets\Jobs\Mage.cs" />
+    <Compile Include="Assets\Jobs\Thief.cs" />
+    <Compile Include="Assets\Jobs\Warrior.cs" />
+    <Compile Include="Assets\Menu\MenuChoice.cs" />
+    <Compile Include="Assets\Menu\MenuUI.cs" />
+    <Compile Include="Assets\Skills\ASkill.cs" />
+    <Compile Include="Assets\Skills\Fireball.cs" />
+    <Compile Include="Assets\State\AState.cs" />
+    <Compile Include="Assets\State\Poison.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Fonts\OFL.txt" />
