--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ sysinfo.txt
 Icon?
 ehthumbs.db
 [Tt]humbs.db
+ClimbThatTower/ProjectSettings/ProjectVersion.txt
+ClimbThatTower/ProjectSettings/ProjectSettings.asset
