--- a/ClimbThatTower/Assembly-CSharp.csproj
+++ b/ClimbThatTower/Assembly-CSharp.csproj
@@ -45,42 +45,38 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Completed\Scripts\BoardManager.cs" />
-     <Compile Include="Assets\Completed\Scripts\Enemy.cs" />
-     <Compile Include="Assets\Completed\Scripts\GameManager.cs" />
-     <Compile Include="Assets\Completed\Scripts\Loader.cs" />
-     <Compile Include="Assets\Completed\Scripts\MovingObject.cs" />
-     <Compile Include="Assets\Completed\Scripts\Player.cs" />
-     <Compile Include="Assets\Completed\Scripts\SoundManager.cs" />
-     <Compile Include="Assets\Completed\Scripts\Wall.cs" />
      <Compile Include="Assets\Entity\AEntity.cs" />
      <Compile Include="Assets\Entity\Team.cs" />
-     <Compile Include="Assets\Entity\TestEntitry.cs" />
      <Compile Include="Assets\Inventory\Item.cs" />
      <Compile Include="Assets\Inventory\ItemDatabase.cs" />
-     <Compile Include="Assets\Item\AItem.cs" />
+     <Compile Include="Assets\Item\ArmorBruiser.cs" />
      <Compile Include="Assets\Item\Colussator.cs" />
-     <Compile Include="Assets\Item\Consumable.cs" />
-     <Compile Include="Assets\Item\DoubleHanded.cs" />
-     <Compile Include="Assets\Item\Foot.cs" />
-     <Compile Include="Assets\Item\Hand.cs" />
-     <Compile Include="Assets\Item\Head.cs" />
+     <Compile Include="Assets\Item\FootBruiser.cs" />
+     <Compile Include="Assets\Item\HandsBruiser.cs" />
+     <Compile Include="Assets\Item\HeadBruiser.cs" />
      <Compile Include="Assets\Item\HealPot.cs" />
+     <Compile Include="Assets\Item\Interface\AItem.cs" />
+     <Compile Include="Assets\Item\Interface\Consumable.cs" />
+     <Compile Include="Assets\Item\Interface\DoubleHanded.cs" />
+     <Compile Include="Assets\Item\Interface\Foot.cs" />
+     <Compile Include="Assets\Item\Interface\Hand.cs" />
+     <Compile Include="Assets\Item\Interface\Head.cs" />
+     <Compile Include="Assets\Item\Interface\LeftHand.cs" />
+     <Compile Include="Assets\Item\Interface\OneHanded.cs" />
+     <Compile Include="Assets\Item\Interface\Pants.cs" />
+     <Compile Include="Assets\Item\Interface\RightHand.cs" />
+     <Compile Include="Assets\Item\Interface\Torso.cs" />
+     <Compile Include="Assets\Item\Interface\Weapon.cs" />
      <Compile Include="Assets\Item\Inventory.cs" />
-     <Compile Include="Assets\Item\LeftHand.cs" />
-     <Compile Include="Assets\Item\OneHanded.cs" />
-     <Compile Include="Assets\Item\Pants.cs" />
+     <Compile Include="Assets\Item\PantsBruiser.cs" />
      <Compile Include="Assets\Item\PeonSword.cs" />
-     <Compile Include="Assets\Item\RightHand.cs" />
      <Compile Include="Assets\Item\TestInventory.cs" />
-     <Compile Include="Assets\Item\Torso.cs" />
-     <Compile Include="Assets\Item\Weapon.cs" />
-     <Compile Include="Assets\Jobs\AJob.cs" />
      <Compile Include="Assets\Jobs\Mage.cs" />
      <Compile Include="Assets\Jobs\Thief.cs" />
      <Compile Include="Assets\Jobs\Warrior.cs" />
      <Compile Include="Assets\Menu\MenuChoice.cs" />
      <Compile Include="Assets\Menu\MenuUI.cs" />
+     <Compile Include="Assets\Menu\PlayerChoice.cs" />
      <Compile Include="Assets\Scripts\FieldUnit.cs" />
      <Compile Include="Assets\Scripts\MapGenerator.cs" />
      <Compile Include="Assets\Scripts\MenuUIManager.cs" />
@@ -101,7 +97,7 @@
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
  </Reference>
  <Reference Include="LitJson">
- <HintPath>C:/Users/coudra_c/Documents/Climb-That-Tower/ClimbThatTower/Assets/Plugins/LitJson.dll</HintPath>
+ <HintPath>C:/Users/Ikaros/Documents/GitHub/Climb-That-Tower/ClimbThatTower/Assets/Plugins/LitJson.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
