--- a/ClimbThatTower/Assembly-CSharp.csproj
+++ b/ClimbThatTower/Assembly-CSharp.csproj
@@ -50,10 +50,14 @@
      <Compile Include="Assets\Inventory\Item.cs" />
      <Compile Include="Assets\Inventory\ItemDatabase.cs" />
      <Compile Include="Assets\Item\ArmorBruiser.cs" />
+     <Compile Include="Assets\Item\ArmorRogue.cs" />
      <Compile Include="Assets\Item\Colussator.cs" />
      <Compile Include="Assets\Item\FootBruiser.cs" />
+     <Compile Include="Assets\Item\FootRogue.cs" />
+     <Compile Include="Assets\Item\HandRogue.cs" />
      <Compile Include="Assets\Item\HandsBruiser.cs" />
      <Compile Include="Assets\Item\HeadBruiser.cs" />
+     <Compile Include="Assets\Item\HeadRogue.cs" />
      <Compile Include="Assets\Item\HealPot.cs" />
      <Compile Include="Assets\Item\Interface\AItem.cs" />
      <Compile Include="Assets\Item\Interface\Consumable.cs" />
@@ -69,7 +73,9 @@
      <Compile Include="Assets\Item\Interface\Weapon.cs" />
      <Compile Include="Assets\Item\Inventory.cs" />
      <Compile Include="Assets\Item\PantsBruiser.cs" />
+     <Compile Include="Assets\Item\PantsRogue.cs" />
      <Compile Include="Assets\Item\PeonSword.cs" />
+     <Compile Include="Assets\Item\SneakyDagger.cs" />
      <Compile Include="Assets\Item\TestInventory.cs" />
      <Compile Include="Assets\Jobs\Mage.cs" />
      <Compile Include="Assets\Jobs\Thief.cs" />
