--- a/ClimbThatTower/ClimbThatTower.CSharp.csproj
+++ b/ClimbThatTower/ClimbThatTower.CSharp.csproj
@@ -70,16 +70,19 @@
     <Compile Include="Assets\Entity\AMob.cs" />
     <Compile Include="Assets\Entity\APlayer.cs" />
     <Compile Include="Assets\Entity\Gnome.cs" />
-    <Compile Include="Assets\Entity\Player.cs" />
     <Compile Include="Assets\Entity\Team.cs" />
     <Compile Include="Assets\Inventory\Item.cs" />
     <Compile Include="Assets\Inventory\ItemDatabase.cs" />
     <Compile Include="Assets\Item\ArmorBruiser.cs" />
+    <Compile Include="Assets\Item\ArmorRogue.cs" />
     <Compile Include="Assets\Item\Colussator.cs" />
     <Compile Include="Assets\Item\EquipmentSet\EquipmentSet.cs" />
     <Compile Include="Assets\Item\FootBruiser.cs" />
+    <Compile Include="Assets\Item\FootRogue.cs" />
+    <Compile Include="Assets\Item\HandRogue.cs" />
     <Compile Include="Assets\Item\HandsBruiser.cs" />
     <Compile Include="Assets\Item\HeadBruiser.cs" />
+    <Compile Include="Assets\Item\HeadRogue.cs" />
     <Compile Include="Assets\Item\HealPot.cs" />
     <Compile Include="Assets\Item\Interface\AItem.cs" />
     <Compile Include="Assets\Item\Interface\Consumable.cs" />
@@ -95,7 +98,9 @@
     <Compile Include="Assets\Item\Interface\Weapon.cs" />
     <Compile Include="Assets\Item\Inventory.cs" />
     <Compile Include="Assets\Item\PantsBruiser.cs" />
+    <Compile Include="Assets\Item\PantsRogue.cs" />
     <Compile Include="Assets\Item\PeonSword.cs" />
+    <Compile Include="Assets\Item\SneakyDagger.cs" />
     <Compile Include="Assets\Item\TestInventory.cs" />
     <Compile Include="Assets\Jobs\Mage.cs" />
     <Compile Include="Assets\Jobs\Thief.cs" />
