--- a/ClimbThatTower/ClimbThatTower.CSharp.csproj
+++ b/ClimbThatTower/ClimbThatTower.CSharp.csproj
@@ -75,7 +75,8 @@
     <Compile Include="Assets\Entity\Mob\Gobelin.cs" />
     <Compile Include="Assets\Entity\Mob\Orc.cs" />
     <Compile Include="Assets\Entity\Team.cs" />
-    <Compile Include="Assets\Inventory\ItemDatabase.cs" />
+    <Compile Include="Assets\Inventory\InventoryItems.cs" />
+    <Compile Include="Assets\Inventory\ItemData.cs" />
     <Compile Include="Assets\Item\ArmorBruiser.cs" />
     <Compile Include="Assets\Item\ArmorRogue.cs" />
     <Compile Include="Assets\Item\Colussator.cs" />
