--- a/ClimbThatTower/ClimbThatTower.CSharp.csproj
+++ b/ClimbThatTower/ClimbThatTower.CSharp.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Assets\Jobs\Mage.cs" />
     <Compile Include="Assets\Jobs\Thief.cs" />
     <Compile Include="Assets\Jobs\Warrior.cs" />
+    <Compile Include="Assets\Menu\HasClicked.cs" />
     <Compile Include="Assets\Menu\MenuUI.cs" />
     <Compile Include="Assets\Menu\PlayerChoice.cs" />
     <Compile Include="Assets\Scripts\FieldUnit.cs" />
