--- a/ClimbThatTower/ClimbThatTower.CSharp.csproj
+++ b/ClimbThatTower/ClimbThatTower.CSharp.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Assets\Entity\Mob\Gobelin.cs" />
     <Compile Include="Assets\Entity\Mob\Orc.cs" />
     <Compile Include="Assets\Entity\Team.cs" />
+    <Compile Include="Assets\IA\IAClass.cs" />
     <Compile Include="Assets\Inventory\InventoryItems.cs" />
     <Compile Include="Assets\Inventory\ItemData.cs" />
     <Compile Include="Assets\Inventory\Slot.cs" />
